added the edit function and still having issues with add movie function

--- a/includes/nav.html
+++ b/includes/nav.html
@@ -1,7 +1,19 @@
-<h2>This content could be your nav</h2>
-<ul class="filterNav">
-<li><a href="index.php?filter=action">Action</a></li>
-<li><a href="index.php?filter=comedy">Comedy</a></li>
-<li><a href="index.php?filter=family">Family</a></li>
-<li><a href="index.php">All</a></li>
-</ul>
+<nav class="navCon">
+  <div id="desktopNav" class="navigation">
+    <h2 class="hidden">Navigation</h2>
+<div class="dropdown">
+  <button class="dropbtn">Genre</button>
+  <div class="dropdown-content">
+    <a href="index.php">All</a>
+    <a href="index.php?filter=action">Action</a>
+    <a href="index.php?filter=adventure">Adventure</a>
+    <a href="index.php?filter=Crime">Crime</a>
+    <a href="index.php?filter=Comedy">Comedy</a>
+    <a href="index.php?filter=family">Family</a>
+    <a href="index.php?filter=romance">Romance</a>
+    <a href="index.php?filter=science fiction">Sci Fi</a>
+  </div>
+</div>
+<a class="logIn" href="admin/admin_login.php" class="log">Log In</a>
+</div>
+</nav>
