--- a/includes/nav.html
+++ b/includes/nav.html
@@ -1,8 +1,9 @@
 <nav class="navCon">
   <div id="desktopNav" class="navigation">
-    <h2 class="hidden">Navigation</h2>
+    <h2 class="hidden">Welcome.</h2>
+
 <div class="dropdown">
-  <button class="dropbtn">Genre</button>
+  <!-- <button class="dropbtn">Genre</button> -->
   <div class="dropdown-content">
     <a href="index.php">All</a>
     <a href="index.php?filter=action">Action</a>
@@ -14,6 +15,7 @@
     <a href="index.php?filter=science fiction">Sci Fi</a>
   </div>
 </div>
+
 <a class="logIn" href="admin/admin_login.php" class="log">Log In</a>
 </div>
 </nav>
