--- a/includes/nav.html
+++ b/includes/nav.html
@@ -4,6 +4,7 @@
 
 <div class="dropdown">
   <!-- <button class="dropbtn">Genre</button> -->
+  <h2>Want to Filter Genres?</h2>
   <div class="dropdown-content">
     <a href="index.php">All</a>
     <a href="index.php?filter=action">Action</a>
@@ -16,6 +17,6 @@
   </div>
 </div>
 
-<a class="logIn" href="admin/admin_login.php" class="log">Log In</a>
+<span><a class="logIn" href="admin/admin_login.php" class="log">Log In</a><span>
 </div>
 </nav>
